# raytracer

./: .gitignore  Cargo.toml  README.md  image.ppm
src/: bvh.rs  camera.rs  data.rs  extensions.rs  interval.rs  lib.rs  main.rs  sphere.rs  texture.rs  world.rs
src/materials/: dialectric.rs  diffuse.rs  diffuse_light.rs  glass.rs  lambertian.rs  metal.rs  mod.rs
src/scenes/: earth.rs  mod.rs  scene_1.rs  scene_2.rs  scene_3.rs  scene_4.rs  two_perlin_spheres.rs
src/shapes/: mod.rs  quad.rs  sphere.rs
