[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
num = "0.4.1"
rand = "0.8.5"
rayon = "1.8.0"
vek = { version = "0.16.1", features = ["repr_simd", "platform_intrinsics"] }
